fixing horizontal scroll issue

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  width: 100vw;
   overflow: hidden;
   header{
     padding: 0 2rem;
@@ -30,6 +29,7 @@
       }
     }
     .main_content{
+      padding: 2rem;
       width: 100vw;
       max-width: 1440px;
       margin: auto;
@@ -44,7 +44,6 @@
         
       }
       .listing_feed{
-        padding-left: 1rem;
         width: auto;
         & > h1{
           position: absolute;
